--- a/html/exercises/index.html
+++ b/html/exercises/index.html
@@ -8,9 +8,9 @@
     <!-- DON'T TOUCH ANYTHING ABOVE THIS LINE -->
   </head>
   <body>
-    <!-- h1 goes here -->
-    <!-- ol goes here -->
-    <!-- a goes here -->
-    <!-- p goes here -->
+    <h1>Why I Love Development</h1>
+    <ol>1. Its cool 2. Its fun 3. Its addicting</ol>
+    <a href="https://www.webelements.com/" target="_blank">WebElements</a>
+    <p>I want to make a website with games</p>
   </body>
 </html>
